revisado sonar